# MediaPipeSocket

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  tox.ini
.github/workflows/: ci.yml
mediapipe_socket/: __init__.py  __main__.py  args.py  client.py  debug.py  filtering.py  filters.py  introduce.py  json_parser.py  mediapipe_wrapper.py  runner.py  udp_client.py  visualizer.py
src/: args.py  filter.py  main.py  parser.py  udp_client.py  visualize.py
src/mediapipe_socket/: __main__.py  args.py  client.py  debug.py  introduce.py  json_parser.py  runner.py  visualizer.py
