[project]
name = "mediapipe-test"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name = "OJII3", email = "84656786+OJII3@users.noreply.github.com" },
]
dependencies = [
  "mediapipe>=0.10.5",
  "tox>=4.11.3",
  "pylance>=0.7.5",
  "isort>=5.12.0",
  "flake8>=5.0.4",
  "numpy>=1.24.4",
  "opencv-python>=4.8.1.78",
  "scipy>=1.10.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black>=23.9.1"]

[tool.rye.scripts]
main = "python src/main.py"
debug = "python src/main.py --debug"
all = "python src/main.py --debug"

[tool.black]
line-length = 88
target-version = ['py311']
include = '^/src\/.*\.py$'

[tool.hatch.metadata]
allow-direct-references = true
