[project]
name = "mediapipe-test"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name = "OJII3", email = "84656786+OJII3@users.noreply.github.com" },
]
dependencies = [
    "mediapipe>=0.10.5",
    "tox>=4.11.3",
    "pylance>=0.7.5",
    "isort>=5.12.0",
    "flake8>=5.0.4",
    "numpy>=1.24.4",
    "opencv-python>=4.8.1.78",
    "scipy>=1.10.1",
    "typed-argument-parser>=1.8.1",
    "keyboard>=0.13.5",
    "pytest>=7.4.2",
    "python-osc>=1.8.3",
    "ruff>=0.3.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mediapipe_socket"]

[tool.rye]
managed = true
dev-dependencies = ["black>=23.9.1"]

[tool.rye.scripts]
min = "python mediapipe_socket --no_visualize --no_lpf"
all = "python mediapipe_socket"
local = "python mediapipe_socket --ip_address 127.0.0.1"
local-min = "python mediapipe_socket --ip_address 127.0.0.1 --no_visualize --no_lpf"
ci = "tox"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '^mediapipe_socket\/.*\.py$'

[tool.isort]
profile = "black"
src_paths = ["mediapipe_socket", "test"]
